# Sewing-machine-stuff

./: .mcp.json  README.md
.github/workflows/: build-index.yml
index/: knowledge.db
manuals/pfaff-quilt-expression-720/: knowledge.yaml
mcp-server/: README.md  pyproject.toml
mcp-server/src/mcp_server/: __init__.py  build_index.py  index_store.py  models.py  server.py  validate.py
mcp-server/tests/: test_build_index.py  test_models.py  test_server_tools.py
mcp-server/tests/fixtures/bad_manuals/test-machine-bad/: knowledge.yaml
mcp-server/tests/fixtures/good_manuals/test-machine/: knowledge.yaml
