[project]
name = "sewing-machine-mcp-server"
version = "0.1.0"
description = "MCP server exposing structured sewing-machine service-manual knowledge"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sewing-mcp-server = "mcp_server.server:main"
sewing-mcp-build-index = "mcp_server.build_index:main"
sewing-mcp-validate = "mcp_server.validate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
